[package]
name = "dioxionary"
version = "1.1.5"
edition = "2021"
authors = ["vaaandark <vaaandark@gmail.com>"]
description = "Remember all words in terminal!"
license = "GPL-2.0"
homepage = "https://github.com/vaaandark/dioxionary"
repository = "https://github.com/vaaandark/dioxionary"
readme = "README.md"
build = "build.rs"
include = ["src/**/*", "LICENSE", "README.md", "README-en.md", "build.rs"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "dioxionary"
path = "src/main.rs"

[lib]
name = "dioxionary"
path = "src/lib.rs"
crate-type = ["lib"]

[dependencies]
reqwest = { version = "0.12.14", features = [
	"blocking",
	"default-tls",
], default-features = false }
hyper = "1.6.0"
scraper = { default-features = false, version = "0.23.1" }
dirs = "6.0.0"
rusqlite = { version = "0.30.0", features = ["bundled"] }
chrono = { features = ["clock"], default-features = false, version = "0.4.40" }
itertools = { default-features = false, version = "0.14.0" }
clap = { version = "4.4.8", features = [
	"derive",
	"help",
], default-features = false }
prettytable = { default-features = false, version = "0.10.0" }
eio = { default-features = false, version = "0.1.2" }
flate2 = { version = "1.0.28", features = [
	"any_zlib",
	"libz-sys",
], default-features = false }
rustyline = { default-features = false, version = "15.0.0" }
dialoguer = { default-features = false, version = "0.11.0" }
tokio = { version = "1.34.0", default-features = false }
rodio = { version = "0.20.1", optional = true }
clap_complete = "4.4.4"
anyhow = "1.0.75"

[target.'cfg(target_env = "musl")'.dependencies]
openssl = { version = "0.10", features = ["vendored"] }

[features]
pronunciation = ["dep:rodio"]

[build-dependencies]
vergen = { version = "7.4.2", default-features = false, features = [
	"build",
	"git",
	"cargo",
] }
anyhow = "1.0"
